Remove old broken dependencies. port from sanic to fast-api. add custom inmemory middleware

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-
-domonic==0.2.11
-sanic-session==0.7.3
-sanic==20.6.3
-numpy==1.19.2
+domonic==0.9.12
+fastapi==0.114.2
+uvicorn==0.30.6
+starlette==0.38.5
+black
+isort
